--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
     $( "#datepicker" ).datepicker();
   } );
       function CreateTableFromJSON(myBooks) {
-        console.log(myBooks);
+        if (myBooks.length==0){
+          var table = document.createElement("table");
+        return table;
+      }
+        // console.log(myBooks);
 
-        myBooks=JSON.parse('[{"id":"10","name":"test"},{"id":"15","name":"test2"}]');
+        // myBooks=JSON.parse('[{"id":"10","name":"test"},{"id":"15","name":"test2"}]');
 
-        console.log(myBooks);
+        // console.log(myBooks);
+        // myBooks=JSON.parse(myBooks);
+        // console.log(myBooks);
           var col = [];
           for (var i = 0; i < myBooks.length; i++) {
               for (var key in myBooks[i]) {
@@ -39,19 +45,23 @@
           table.setAttribute("id", "table1");
           var tblBody = table.createTBody();
           var tr = tblBody.insertRow(-1);                   // TABLE ROW.
+          // console.log(col);
           // ADD JSON DATA TO THE TABLE AS ROWS.
           for (var i = 0; i < myBooks.length; i++) {
+            // console.log(myBooks[i]);
               tr = table.insertRow(-1);
               for (var j = 0; j < col.length; j++) {
+                // console.log(col[j]);
                   var tabCell = tr.insertCell(-1);
                   tabCell.innerHTML = myBooks[i][col[j]];
               }
           }
+          // console.log(table);
           // FINALLY ADD THE NEWLY CREATED TABLE WITH JSON DATA TO A CONTAINER.
           // var divContainer = document.getElementById("showData");
           // divContainer.innerHTML = "";
           // divContainer.appendChild(table)
-          var rrow=table.rows[2].cells;
+          var rrow=table.rows[1].cells;
           var width = [];
           for(let i = 0; i < rrow.length; i++){
             width.push(rrow[i].offsetWidth+5);
@@ -105,7 +115,7 @@
       }
       function events_data () {
         console.log("Events!");
-        var res;
+        var res="";
         $.ajax({
           url:"sql.php", //the page containing php script
           type: "post", //request type,
@@ -113,7 +123,7 @@
           data: {type:"GetEvents"},
           async: false, // HERE
           success:function(result){
-            // console.log(result);
+            console.log(result);
             res=result;
           }
         });
@@ -121,7 +131,7 @@
       }
       function purchase_data (idd) {
         console.log("Purchase!");
-        var res;
+        var res="";
         $.ajax({
           url:"sql.php", //the page containing php script
           type: "post", //request type,
@@ -172,8 +182,9 @@
         var divContainer = document.getElementById("main_parent");
         divContainer.innerHTML = "";
         var events=events_data();
-        // console.log(events);
+        console.log(events);
         events.forEach(function(res) {
+          console.log(res);
           var div = document.createElement("div");
           var par = document.createElement("p");
           var hr = document.createElement("hr");
@@ -186,9 +197,10 @@
           div.appendChild(par);
           par.appendChild(bt);
           // console.log(purchase_data(res['id']));
-          // var json=JSON.parse(purchase_data(res['id']));
-          // console.log(json);
-          div.appendChild(CreateTableFromJSON(purchase_data(res['id'])));
+          console.log(res['id']);
+          var json=purchase_data(res['id']);
+          console.log(json);
+          div.appendChild(CreateTableFromJSON(json));
           div.appendChild(hr);
           divContainer.appendChild(div);
         });
